editor/sass/editor/_editor-assets-panel.scss
/* ... */
.pcui-asset-panel-grid-view-small {
    .pcui-asset-grid-view-item {
        &.type-textureatlas:before,
        &.type-render:before {
            top: 1px;
            left: 1px;
            font-size: 10px;
        }
    }
}

.pcui-asset-panel-task-running, .pcui-asset-panel-task-failed {
    .pcui-spinner {
        display: inline-block;
    }

    .pcui-progress {
        display: block;
    }

    &.pcui-table-row {
        .pcui-asset-thumb {
            display: none;
        }
    }
}

.pcui-asset-panel-grid-view-small {
    .pcui-asset-grid-view-item {
        width: 64px;
        height: 68px;

        > .pcui-asset-thumb {
            width: 40px;
            height: 40px;
            margin: 4px;

            &:before {
                font-size: 32px;
            }

            &.type-folder:before {
                font-size: 38px;
            }
        }

        > .pcui-gridview-item-text {
            max-width: 100%;
        }

    }

    .pcui-asset-panel-highlighted-asset {
        &.pcui-gridview-item {
            border: 2px solid $text-active;
        }
    }
}

.pcui-asset-grid-view-item-source {
    > .pcui-asset-thumb:not(.type-folder) {
        outline: 1px dashed rgba($text-darkest, 0.5);
    }
}

.pcui-asset-panel {
    &.pcui-collapsed {
        > .pcui-panel-header {
            position: absolute;
            top: -32px;
            left: 4px;

            .pcui-asset-panel-hide-on-collapse {
                display: none;
            }
        }
    }

    > .pcui-panel-header {
        background-color: $bcg-darker;
        > .pcui-panel-header-title {
            margin-right: 2 * $element-margin;
            flex-shrink: 0;
        }

        .pcui-asset-panel-controls {
            flex-direction: row;
            flex-grow: 1;
            align-items: center;
        }

        .pcui-button {
            height: 24px;
            line-height: 24px;
            border: 1px solid $bcg-darkest;
            background-color: $bcg-dark;
            margin: $element-margin;
            flex-shrink: 0;
        }


        .pcui-asset-panel-btn-small {
            padding: 0;
            width: 24px;
            font-size: 15px;
            margin-left: 0;
            margin-top: 4px;
            margin-bottom: 4px;
        }

        .pcui-asset-panel-btn-active {
            background-color: $bcg-darkest !important;
            color: $text-primary;
        }

        .pcui-asset-panel-btn-container {
            height: 100%;
            align-items: center;
            margin-left: 2 * $element-margin;
            padding-left: 3 * $element-margin;
            border-left: 1px solid $bcg-darkest;
            flex-shrink: 0;

            margin-right: 2 * $element-margin;
            padding-right: 2 * $element-margin;
            border-right: 1px solid $bcg-darkest;
        }

        .pcui-select-input {
            width: 230px;

            &.pcui-open {
                z-index: 2;
            }

            .pcui-label {
                font-weight: bold;
            }

            .pcui-select-input-list {
                max-height: 430px;
            }
        }

        .pcui-text-input {
            width: 230px;
            font-weight: bold;
            line-height: 24px;

            > input {
                max-width: calc(100% - 24px);
                text-overflow: ellipsis;
            }

            .pcui-button {
                position: absolute;
                right: 0;
                background: transparent;
                margin: 0;
                border: 0;
                box-shadow: none;
                &:hover {
                    color: $error;
                }
            }

            // placeholder left
            &:after {
                left: 0;
                right: initial;
                font-size: 12px;
            }
        }

        .pcui-asset-panel-btn-store {
            margin-left: auto;
        }
    }
}

.pcui-asset-panel-legacy-scripts {
    &.pcui-gridview-item {
        &:after {
            content: 's';
            position: absolute;
            left: 46px;
            top: 29px;
            font-size: 31px;
            color: $bcg-darker;
        }
    }

    &.pcui-treeview-item {
        &:after {
            content: 's';
            position: absolute;
            left: 34px;
            top: 5px;
            font-size: 11px;
            color: $bcg-darker;
            z-index: 1;
        }
    }

    &.pcui-table-row {
        .pcui-asset-thumb {
            &:after {
                content: 's';
                position: absolute;
                left: 6px;
                top: 3px;
                font-size: 11px;
                color: $bcg-darker;
            }
        }
    }
}

.pcui-asset-panel-grid-view-small {
    .pcui-asset-panel-legacy-scripts {
        &.pcui-gridview-item {
            &:after {
                left: 27px;
                top: 14px;
                font-size: 23px;
            }
        }
    }
}

.pcui-asset-panel-progress {
    flex: 1;
    flex-basis: 100%;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    background-color: $bcg-dark;

    .pcui-progress {
        flex-basis: 128px;
    }
}

.pcui-asset-panel-users {
    flex-direction: row;
    position: absolute;
    top: 0;
    right: 0;
    max-height: 65%;
    overflow: hidden;
    flex-wrap: wrap;
    justify-content: flex-end;
    pointer-events: none;
}

.pcui-asset-panel-users-indicator {
    margin: $element-margin / 2;
    width: 8px;
    height: 8px;
    flex-shrink: 0;
}

.pcui-asset-panel .pcui-table {
    .pcui-asset-panel-users {
        max-height: initial;
        top: 5px;
        max-width: (6 + $element-margin) * 8;
        flex-wrap: nowrap;
    }

    .pcui-asset-panel-users-indicator {
        width: 6px;
        height: 6px;
    }
}
/* ... */

